--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>alyss-crypto</title>
+    <title>艾丽莎加密</title>
+    <style>
+        body { font-family: Arial; text-align: center; padding: 50px; }
+        h1 { color: #2e86c1; }
+    </style>
 </head>
 <body>
-    <h1>欢迎你们</h1>
+    <h1>欢迎来到艾丽莎加密</h1>
+    <p>实时加密货币数据即将上线！</p>
+    <!-- 添加CoinGecko行情组件 -->
+    <script src="https://widgets.coingecko.com/coingecko-coin-ticker-widget.js"></script>
+    <coingecko-coin-ticker-widget coin-id="bitcoin" currency="usd" locale="zh"></coingecko-coin-ticker-widget>
 </body>
 </html>
