--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
     <title>艾丽莎加密</title>
-    <style>
+    <style><header style="background: #4a2c82; padding: 1rem;">
+    <a href="/" style="color: white; margin-right: 1rem;">首页</a>
+    <a href="#news" style="color: white;">新闻</a>
+</header>
         body { font-family: Arial; text-align: center; }
         h1 { color: #4a2c82; }
     </style>
