--- a/index.html
+++ b/index.html
@@ -1,19 +1,131 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-    <title>艾丽莎加密</title>
-    <style><header style="background: #4a2c82; padding: 1rem;">
-    <a href="/" style="color: white; margin-right: 1rem;">首页</a>
-    <a href="#news" style="color: white;">新闻</a>
-</header>
-        body { font-family: Arial; text-align: center; }
-        h1 { color: #4a2c82; }
+    <title>艾丽莎加密 - 全币种行情</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+            background: #f5f5f5;
+        }
+        h1 {
+            color: #4a2c82;
+            text-align: center;
+        }
+        #search {
+            width: 100%;
+            padding: 10px;
+            margin: 20px 0;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            background: white;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        }
+        th, td {
+            padding: 12px 15px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
+        th {
+            background: #4a2c82;
+            color: white;
+            cursor: pointer;
+        }
+        tr:hover {
+            background: #f0f0f0;
+        }
+        .up {
+            color: #16c784;
+        }
+        .down {
+            color: #ea3943;
+        }
+        .refresh-info {
+            text-align: right;
+            color: #666;
+            font-size: 14px;
+        }
     </style>
 </head>
 <body>
-    <h1>加密货币行情站</h1>
-    <!-- CoinGecko 组件 -->
-    <script src="https://widgets.coingecko.com/coingecko-coin-ticker-widget.js"></script>
-    <coingecko-coin-ticker-widget coin-id="bitcoin" currency="usd" locale="zh"></coingecko-coin-ticker-widget>
+    <h1>📊 全加密货币实时行情</h1>
+    <input type="text" id="search" placeholder="搜索币种...">
+    <div class="refresh-info">最后更新: <span id="lastUpdate"></span></div>
+    <table id="cryptoTable">
+        <thead>
+            <tr>
+                <th onclick="sortTable(0)">排名</th>
+                <th onclick="sortTable(1)">名称</th>
+                <th onclick="sortTable(2)">价格(USD)</th>
+                <th onclick="sortTable(3)">24h涨跌</th>
+                <th onclick="sortTable(4)">市值</th>
+            </tr>
+        </thead>
+        <tbody id="cryptoData"></tbody>
+    </table>
+
+    <script>
+        // 获取数据并渲染表格
+        async function fetchData() {
+            try {
+                const response = await fetch('https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&order=market_cap_desc&per_page=100&page=1&sparkline=false');
+                const data = await response.json();
+                renderTable(data);
+                document.getElementById('lastUpdate').textContent = new Date().toLocaleString();
+            } catch (error) {
+                console.error('获取数据失败:', error);
+            }
+        }
+
+        // 渲染表格
+        function renderTable(data) {
+            const tbody = document.getElementById('cryptoData');
+            tbody.innerHTML = '';
+            
+            data.forEach(coin => {
+                const changeClass = coin.price_change_percentage_24h >= 0 ? 'up' : 'down';
+                const row = `
+                    <tr>
+                        <td>${coin.market_cap_rank || '-'}</td>
+                        <td><img src="${coin.image}" width="20" height="20"> ${coin.name} (${coin.symbol.toUpperCase()})</td>
+                        <td>$${coin.current_price.toLocaleString()}</td>
+                        <td class="${changeClass}">${coin.price_change_percentage_24h?.toFixed(2)}%</td>
+                        <td>$${coin.market_cap.toLocaleString()}</td>
+                    </tr>
+                `;
+                tbody.innerHTML += row;
+            });
+        }
+
+        // 搜索功能
+        document.getElementById('search').addEventListener('input', (e) => {
+            const searchTerm = e.target.value.toLowerCase();
+            const rows = document.querySelectorAll('#cryptoData tr');
+            
+            rows.forEach(row => {
+                const name = row.children[1].textContent.toLowerCase();
+                row.style.display = name.includes(searchTerm) ? '' : 'none';
+            });
+        });
+
+        // 排序功能
+        function sortTable(column) {
+            // 实现点击表头排序（可根据需要完善）
+            alert('排序功能需额外实现，当前为示例');
+        }
+
+        // 初始加载 + 每分钟刷新
+        fetchData();
+        setInterval(fetchData, 60000);
+    </script>
 </body>
 </html>
